--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -13,11 +13,11 @@ license: CC0-1.0
 
 ### Simple Summary
 
-This ECIP defines the Ethereum Classic Funding Proposal (ECFP) process: a standardized, permissionless mechanism for requesting protocol-level funding from the Olympia Treasury, governed by the Olympia DAO. The ECFP format enables developers, infrastructure operators, researchers, and ecosystem contributors to submit transparent, auditable proposals for on-chain funding. By formalizing a reproducible structure for submission, voting, and disbursement, this process ensures treasury allocations are accountable, equitable, and aligned with Ethereum Classic’s principles of decentralization and sustainability.
+This ECIP defines the Ethereum Classic Funding Proposal (ECFP) process: a standardized, permissionless mechanism for submitting and executing funding requests from the Olympia Treasury, governed by the Olympia DAO. The ECFP format provides a reproducible structure for transparent and accountable allocation of protocol-level funds. The ECFP format enables developers, infrastructure operators, researchers, and ecosystem contributors to submit transparent, auditable proposals for on-chain funding. By formalizing a reproducible structure for submission, voting, and disbursement, this process ensures treasury allocations are accountable, equitable, and aligned with Ethereum Classic’s principles of decentralization and sustainability.
 
 ### Abstract
 
-This ECIP defines the Ethereum Classic Funding Proposal (ECFP) process as the standard format and lifecycle for submitting and executing funding requests to the Olympia Treasury, governed by the Olympia DAO. The ECFP mechanism provides a transparent, reproducible pathway for protocol-level funding, enabling contributors to propose work that aligns with the network’s values and strategic priorities.
+This ECIP formalizes the Ethereum Classic Funding Proposal (ECFP) process as the standard submission, voting, and execution mechanism for allocating funds from the Olympia Treasury. The ECFP mechanism provides a transparent, reproducible pathway for protocol-level funding, enabling contributors to propose work that aligns with the network’s values and strategic priorities.
 
 Each ECFP includes a clearly scoped problem statement, deliverables, funding amount, recipient(s), disbursement schedule, and success criteria. Proposals undergo community discussion, on-chain voting, and time-locked execution upon approval.
 
@@ -35,7 +35,7 @@ The Ethereum Classic Funding Proposal (ECFP) process addresses this need by:
 - **Supporting open participation** — any contributor may submit proposals, regardless of affiliation.
 - **Improving accountability** — all proposal data and voting outcomes are recorded on-chain.
 - **Streamlining governance** — standardized formats reduce review complexity and decision fatigue.
-- **Preserving institutional knowledge** — approved and rejected proposals remain publicly archived for future reference.
+- **Preserving institutional knowledge** — all proposals, regardless of outcome, remain publicly archived on-chain and in content-addressed storage for long-term accessibility.
 
 Modeled after the ECIP process, the ECFP framework brings transparent, rules-based treasury funding to Ethereum Classic for the first time in its history.
 
@@ -67,7 +67,7 @@ The Ethereum Classic Funding Proposal (ECFP) process defines a standardized, on-
    - `Approved`: Passed voting thresholds; scheduled for execution.
    - `Rejected`: Failed quorum or approval threshold.
    - `Executed`: Disbursement completed via Treasury contract.
-   - `Expired`: Lapsed without vote within the valid period.
+   - `Expired`: Automatically marked if a proposal fails to initiate a vote within a DAO-defined validity window (e.g., 30 days).
 
 3. **Voting and Quorum**
 
@@ -107,7 +107,7 @@ To maintain resilience and openness, the following mitigations MAY be enforced b
   - Proposals MUST reside in `Draft` state before activation to allow community feedback.
 
 - **Structured Format Requirements**  
-  - Submissions MUST follow approved templates and include content-addressed metadata (e.g., IPFS CID).
+  - All ECFPs MUST conform to a standardized template and embed a verifiable content hash (e.g., IPFS CID, Arweave digest) to ensure metadata immutability and auditability.
 
 - **Voting Model Upgradeability**  
   - The DAO MAY adopt new voting mechanisms (e.g., quadratic voting, reputation scoring) via governance vote.
@@ -133,7 +133,7 @@ Additional safeguards MAY include:
 
 To facilitate fiat disbursements and administrative compliance, an external legal interface is provided through the Ethereum Classic DAO LLC — a Wyoming-registered entity operating under the Wyoming DAO LLC Act.
 
-- The LLC SHALL act solely as an executor for approved DAO proposals and SHALL NOT make independent decisions.
+- The Ethereum Classic DAO LLC SHALL operate as a non-discretionary executor of approved proposals. It SHALL perform no evaluative, filtering, or discretionary role, and SHALL be fully subordinate to the on-chain governance outcome.
 - It SHALL publish periodic public reports, including:
   - Donation receipts  
   - Contractor onboarding logs  
@@ -159,7 +159,7 @@ DAO tokenholders MAY reassign LLC roles or rotate signers via term-limited elect
   - Transparent  
   - Subject to community oversight
 
-**Non-normative best practice**: The DAO MAY offer a “Donation ECFP” format allowing donors to suggest proposal-aligned funding streams routed through on-chain governance.
+**Informative Note**: As a best practice, the DAO MAY define a "Donation ECFP" format, enabling donors to align earmarked contributions with specific proposals. All such disbursements MUST pass through the standard governance process.
 
 ### Rationale
 
@@ -180,7 +180,7 @@ The ECFP process formalizes a community-controlled mechanism for allocating prot
 - **Transparent** — All proposals, votes, and disbursements are recorded immutably on-chain.
 - **Inclusive** — Any contributor may submit a proposal without requiring prior affiliation or political capital.
 - **Predictable** — Proposal structure and lifecycle are standardized, reducing ambiguity for both proposers and voters.
-- **Upgradeable** — The process is governance-agnostic and supports future upgrades to DAO logic or voting models.
+- **Upgradeable** — The process is governance-agnostic and supports modular upgrades to DAO architecture, voting logic, and funding workflows.
 
 #### Key Design Objectives
 
