--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -406,3 +406,18 @@ The full system MUST be tested on Mordor Testnet, reviewed through public audits
 
 Copyright and related rights waived via  
 [CC0](https://creativecommons.org/publicdomain/zero/1.0/)
+
+### Appendix: EVM Precedents for Treasury Governance
+
+Several EVM-compatible networks have successfully implemented DAO-based treasury funding mechanisms. These examples validate the viability, scalability, and security of the ECFP model adopted in ECIP-1114:
+
+| Network       | Treasury Mechanism                     | Governance Model         | Notes                                                             |
+|---------------|-----------------------------------------|---------------------------|-------------------------------------------------------------------|
+| Ronin         | `BASEFEE` redirected to treasury        | Ronin DAO (Snapshot + Multisig) | Funds infrastructure, staking rewards, community grants           |
+| Celo          | Gas fees routed to a fee handler contract | On-chain proposals via Celo Governance | Supports public goods, validator incentives, and community funds |
+| Mantle        | Modular treasury from L2 revenue        | Mantle Governance         | Used to fund ecosystem growth and dev tooling                    |
+| Optimism      | Retroactive Public Goods Funding (RPGF) | Token House + Citizens House | Distributes funds retroactively for high-impact contributions     |
+| Arbitrum      | AIP process for grant disbursements     | Arbitrum DAO              | $ARB used for voting; all disbursements on-chain and verifiable   |
+
+These precedents support the security and feasibility of the Ethereum Classic Funding Proposal (ECFP) system. ECIP-1114 builds on their lessons while tailoring the process to Ethereum Classic's values of decentralization, transparency, and immutability.
+
