--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -68,6 +68,45 @@ The Olympia Treasury contract MUST meet the following technical constraints:
 - **Access Control**:  
   - Reverts all direct withdrawal attempts from EOAs or unauthorized contracts.
 
+#### Reference Implementation (Solidity)
+
+This example contract ensures funds can only be released by the authorized DAO executor address, with immutable logic and one-time execution per proposal. The `proposalHash` links to an off-chain metadata digest, ensuring alignment between proposal content and disbursement.
+
+```solidity
+// SPDX-License-Identifier: MIT
+pragma solidity ^0.8.20;
+
+interface IDAOExecutor {
+    function isApprovedProposal(bytes32 proposalHash) external view returns (bool);
+}
+
+contract OlympiaTreasury {
+    address public immutable dao;
+    mapping(bytes32 => bool) public executedProposals;
+
+    event FundsReleased(bytes32 indexed proposalHash, address recipient, uint256 amount);
+
+    constructor(address _dao) {
+        require(_dao != address(0), "Invalid DAO address");
+        dao = _dao;
+    }
+
+    receive() external payable {}
+
+    function release(bytes32 proposalHash, address payable recipient, uint256 amount) external {
+        require(msg.sender == dao, "Not authorized");
+        require(!executedProposals[proposalHash], "Already executed");
+        require(recipient != address(0), "Invalid recipient");
+
+        executedProposals[proposalHash] = true;
+        (bool success, ) = recipient.call{value: amount}("");
+        require(success, "Transfer failed");
+
+        emit FundsReleased(proposalHash, recipient, amount);
+    }
+}
+```
+
 #### Governance Integration
 
 The Treasury contract SHALL expose a restricted interface callable only by a designated DAO executor contract (see ECIP-1113). This interface MUST include:
