--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -318,6 +318,21 @@ While ECIP-1114 introduces no changes to Ethereum Classic's consensus or EVM beh
 
 #### 1. Metadata and Proposal Integrity
 
+This proposal hash serves as the unique identifier for execution. It links the on-chain disbursement to an immutable, off-chain metadata record stored on IPFS or Arweave. This guards against tampering and ensures verifiability of funding intent and deliverables.
+
+```solidity
+// Example for generating a verifiable proposal hash off-chain:
+bytes32 proposalHash = keccak256(
+    abi.encodePacked(
+        ecfpId,
+        recipient,
+        amount,
+        metadataCID,
+        block.chainid
+    )
+);
+```
+
 - **Content-Addressed Metadata**:  
   Every ECFP MUST embed a content hash (e.g., IPFS CID or Arweave digest) in its on-chain metadata to ensure tamper resistance.
 
