--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -49,6 +49,37 @@ The Olympia Treasury contract SHALL be deployed at a fixed, deterministic addres
 The address derivation MUST be reproducible across all client implementations to ensure deterministic deployment and cross-client consensus integrity.
 The address derivation MUST use a deterministic method (e.g., `CREATE2`) and be reproducible across all client implementations. The final address SHALL be published in coordination with Core-Geth.
 
+#### Example: CREATE2 Address Derivation
+
+The Olympia Treasury contract address SHALL be deterministically derived using the `CREATE2` opcode to ensure consistent deployment across clients.
+
+```solidity
+// SPDX-License-Identifier: MIT
+pragma solidity ^0.8.20;
+
+address treasuryAddress = address(
+    uint160(uint256(
+        keccak256(
+            abi.encodePacked(
+                bytes1(0xff),
+                deployerAddress,
+                salt,
+                keccak256(bytecode)
+            )
+        )
+    ))
+);
+```
+Where:
+
+* `deployerAddress` is the known deployer address (e.g. DAO multisig or fixed deployer)
+
+* `salt` is a constant value (e.g. `bytes32("OLYMPIA_VAULT")`)
+
+* `bytecode` is the keccak256 hash of the compiled treasury contract
+
+This method allows deterministic pre-publication of the treasury address for testnet coordination and client integration.
+
 #### Fee Redirection and Consensus Enforcement
 
 - **Funding Source**: 100% of the `BASEFEE` from all EIP-1559 transactions SHALL be redirected to the Olympia Treasury.
@@ -70,41 +101,80 @@ The Olympia Treasury contract MUST meet the following technical constraints:
 
 #### Reference Implementation (Solidity)
 
+#### Example: Olympia Treasury Contract
+
 This example contract ensures funds can only be released by the authorized DAO executor address, with immutable logic and one-time execution per proposal. The `proposalHash` links to an off-chain metadata digest, ensuring alignment between proposal content and disbursement.
 
 ```solidity
 // SPDX-License-Identifier: MIT
 pragma solidity ^0.8.20;
 
-interface IDAOExecutor {
-    function isApprovedProposal(bytes32 proposalHash) external view returns (bool);
-}
-
+/// @title Olympia Treasury - Immutable Vault Contract
+/// @notice Accepts BASEFEE revenue and permits disbursement only by DAO executor
 contract OlympiaTreasury {
+    /// @notice Authorized DAO executor contract
     address public immutable dao;
+
+    /// @notice Tracks executed proposal hashes to prevent re-execution
     mapping(bytes32 => bool) public executedProposals;
 
-    event FundsReleased(bytes32 indexed proposalHash, address recipient, uint256 amount);
+    /// @notice Emitted when funds are released to a recipient
+    event FundsReleased(
+        bytes32 indexed proposalHash,
+        address indexed recipient,
+        uint256 amount
+    );
 
+    /// @param _dao Address of the authorized DAO executor
     constructor(address _dao) {
         require(_dao != address(0), "Invalid DAO address");
         dao = _dao;
     }
 
+    /// @notice Fallback to accept incoming BASEFEE transfers
     receive() external payable {}
 
-    function release(bytes32 proposalHash, address payable recipient, uint256 amount) external {
+    /// @notice Executes an approved proposal via hash-bound disbursement
+    /// @param proposalHash Unique hash derived off-chain from proposal metadata
+    /// @param recipient Target address to receive funds
+    /// @param amount Amount of ETC (in wei) to transfer
+    function release(
+        bytes32 proposalHash,
+        address payable recipient,
+        uint256 amount
+    ) external {
         require(msg.sender == dao, "Not authorized");
         require(!executedProposals[proposalHash], "Already executed");
         require(recipient != address(0), "Invalid recipient");
 
         executedProposals[proposalHash] = true;
+
         (bool success, ) = recipient.call{value: amount}("");
         require(success, "Transfer failed");
 
         emit FundsReleased(proposalHash, recipient, amount);
     }
 }
+```
+
+#### Example: Off-Chain Proposal Hashing
+
+For compatibility with the `release()` function, each proposal MUST generate a unique hash off-chain to ensure one-time disbursement enforcement.
+
+```solidity
+// SPDX-License-Identifier: MIT
+pragma solidity ^0.8.20;
+
+// Example for generating a verifiable proposal hash off-chain:
+bytes32 proposalHash = keccak256(
+    abi.encodePacked(
+        ecfpId,         // Unique proposal ID
+        recipient,      // Address receiving funds
+        amount,         // Amount of ETC to disburse
+        metadataCID,    // Optional IPFS or Arweave metadata reference
+        block.chainid   // Chain binding
+    )
+);
 ```
 
 #### Governance Integration
@@ -201,6 +271,24 @@ The Olympia Treasury design builds on proven patterns from other EVM-compatible 
   The OP Stack supports EIP-1559-style transactions and sequencer revenue splitting, but does not redirect `BASEFEE` to a DAO treasury. This provides a useful counterexample for evaluating the neutrality and sustainability of treasury design decisions across rollup architectures.
 
 These implementations reflect a broader trend: **redirecting protocol revenue to transparent, on-chain treasuries is an effective, neutral, and incentive-aligned strategy** for funding ecosystem development without introducing inflation or centralized control.
+
+#### Addendum: Verified Contract References
+
+For deeper implementation study and validation, below are verified contracts used by other EVM ecosystems:
+
+- **Ronin Treasury Contract**  
+  [`0x9f76...5217`](https://explorer.roninchain.com/address/0x9f76b782bdfba7a5e9eaa9b7b0f2c78b6596b217)
+
+- **Celo Gas Fee Handler**  
+  [`0x471E...8438`](https://explorer.celo.org/address/0x471EcE3750Da237f93B8E339c536989b8978a438)
+
+- **Mantle Treasury Flow (Docs)**  
+  [https://docs.mantle.xyz/network/mantle-tokenomics/treasury-flow](https://docs.mantle.xyz/network/mantle-tokenomics/treasury-flow)
+
+- **Polygon CDK Modular Treasury (Overview)**  
+  [https://polygon.technology/blog/polygon-cdk-announces-native-support-for-eip-4844-and-modular-daos](https://polygon.technology/blog/polygon-cdk-announces-native-support-for-eip-4844-and-modular-daos)
+
+These implementations support the validity, neutrality, and resilience of redirecting protocol-layer fees to transparent, on-chain treasuries.
 
 ### Implementation
 
