--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -114,6 +114,18 @@ To mitigate centralization risk in the off-chain administrative interface (i.e.,
 
 These practices ensure public accountability and reduce the risk of governance capture or founder entrenchment.
 
+### Execution Timelock Example
+
+The DAO queues and executes proposals after a voting delay. Execution is programmatic and non-discretionary, ensuring the treasury cannot be manipulated or diverted.
+
+```solidity
+// Example: DAO timelock calling treasury execution
+function executeECFP(bytes32 proposalHash, address recipient, uint256 amount) external {
+    require(_isQueuedProposal(proposalHash), "Not queued or invalid");
+    OlympiaTreasury(treasuryAddress).release(proposalHash, recipient, amount);
+}
+```
+
 ### Rationale
 
 #### Modular, Future-Ready Governance
