--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -94,6 +94,22 @@ The Olympia upgrade activates the following Ethereum protocol improvements on Et
 - The `basefee` is **redirected** (not burned) to a designated treasury address managed by the [Olympia Treasury contract (ECIP-1112)](https://ecips.ethereumclassic.org/ECIPs/ecip-1112).
 - The treasury contract is immutable, non-upgradable, and governed exclusively by on-chain proposals submitted and executed through [Olympia DAO (ECIP-1113)](https://ecips.ethereumclassic.org/ECIPs/ecip-1113).
 
+##### Example: Hardcoded BASEFEE Redirection (Solidity)
+
+```solidity
+// Core-Geth basefee redirection logic (simplified pseudocode)
+address constant TREASURY = 0x4242...ecip1112; // Replace with final deployed treasury address
+
+function finalizeBlock(...) internal {
+    ...
+    uint256 baseFeeAmount = block.basefee * gasUsed;
+    payable(TREASURY).transfer(baseFeeAmount); // Send to Olympia Treasury
+    ...
+}
+```
+
+> 🔒 **Consensus-critical logic**: This redirection is enforced within the client’s block finalization process and **cannot be bypassed or altered** without a hard fork. The `BASEFEE` is transferred to the Olympia Treasury at the protocol level before miner rewards are issued.
+
 No additional EVM changes, consensus rules, or opcodes are introduced in this upgrade.
 
 #### Implementation Notes
