--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -119,11 +119,22 @@ These practices ensure public accountability and reduce the risk of governance c
 The DAO queues and executes proposals after a voting delay. Execution is programmatic and non-discretionary, ensuring the treasury cannot be manipulated or diverted.
 
 ```solidity
-// Example: DAO timelock calling treasury execution
+// On-chain: DAO timelock execution calling treasury
 function executeECFP(bytes32 proposalHash, address recipient, uint256 amount) external {
     require(_isQueuedProposal(proposalHash), "Not queued or invalid");
     OlympiaTreasury(treasuryAddress).release(proposalHash, recipient, amount);
 }
+
+// Off-chain: Hash generation reference (off-chain tooling)
+bytes32 proposalHash = keccak256(
+    abi.encodePacked(
+        ecfpId,        // Unique numeric ID
+        recipient,     // Target address
+        amount,        // ETC amount in wei
+        metadataCID,   // IPFS or Arweave content hash for proposal docs
+        block.chainid  // Replay protection
+    )
+);
 ```
 
 ### Rationale
@@ -296,6 +307,16 @@ Customizable parameters SHALL include:
 - Quorum requirements  
 - Timelock duration before execution
 
+```solidity
+// Example: Simple voting function (OpenZeppelin-based)
+function castVote(uint256 proposalId, uint8 support) external {
+    require(state(proposalId) == ProposalState.Active, "Voting closed");
+    uint256 weight = getVotes(msg.sender, proposalSnapshot[proposalId]);
+    require(weight > 0, "No voting power");
+    _countVote(proposalId, msg.sender, support, weight);
+}
+```
+
 #### 2. Timelock Contract
 
 A dedicated timelock contract SHALL enforce a mandatory execution delay after proposals pass, enabling public review and intervention prior to disbursement. This contract:
@@ -313,10 +334,42 @@ Voting MAY be implemented using one or more of the following mechanisms:
 
 The initial implementation SHALL avoid pre-minting any governance token. Any future token issuance MUST be approved via DAO vote and remain compliant with anti-premine principles.
 
+```solidity
+// Example: Delegate voting power to another address
+function delegate(address delegatee) public {
+    _delegate(msg.sender, delegatee);
+}
+
+// Snapshot block used to calculate voting weight
+function getVotes(address account, uint256 blockNumber) public view returns (uint256) {
+    return _checkpoints[account].getAtBlock(blockNumber);
+}
+```
+
 #### 4. Proposal Metadata and Off-Chain Discussion
 
 - Proposals SHALL include IPFS, Arweave, or similar metadata pointers to human-readable descriptions.  
 - Informal deliberation MAY occur on off-chain platforms (e.g., ECIP forums, Discord) prior to on-chain submission.
+
+```solidity
+// Example: Proposal creation with metadata hash binding
+function submitProposal(
+    address recipient,
+    uint256 amount,
+    string calldata metadataCID
+) external returns (uint256) {
+    uint256 proposalId = ++proposalCount;
+    bytes32 hash = keccak256(abi.encodePacked(proposalId, recipient, amount, metadataCID, block.chainid));
+    proposals[proposalId] = Proposal({
+        recipient: recipient,
+        amount: amount,
+        metadataCID: metadataCID,
+        hash: hash
+    });
+    emit ProposalSubmitted(proposalId, recipient, amount, metadataCID);
+    return proposalId;
+}
+```
 
 #### 5. Treasury Integration
 
