--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -81,6 +81,22 @@ The Ethereum Classic Funding Proposal (ECFP) process defines a standardized, on-
    - Disbursements MAY be immediate, time-locked, or milestone-based.
    - Execution MUST emit a `ProposalExecuted` event with relevant metadata (e.g., ECFP ID, recipient, amount, timestamp).
 
+   The following call pattern MUST be used to enforce DAO-only execution and maintain proposal-auditing integrity:
+
+   ```solidity
+   // On-chain: DAO execution of approved ECFP via Treasury
+   function executeECFP(
+      uint256 ecfpId,
+      bytes32 proposalHash,
+      address recipient,
+      uint256 amount
+   ) external {
+      require(isApproved(ecfpId), "ECFP not approved");
+      OlympiaTreasury(treasuryAddress).release(proposalHash, recipient, amount);
+   }
+   ```
+
+
 5. **Amendments and Withdrawals**
 
    - Proposals MAY be modified or withdrawn while in `Draft` status.
@@ -232,6 +248,30 @@ The Ethereum Classic Funding Proposal (ECFP) process SHALL be implemented as an 
 - Proposals SHOULD follow the [official ECFP Markdown template](https://github.com/ethereumclassic/ECFPs/blob/main/ecfp-template.md).
 - Proposals MAY include links to GitHub repositories, mockups, prototypes, or community endorsements.
 
+Proposal metadata MUST be hashed and linked to content-addressed storage (e.g., IPFS or Arweave) using the following structure:
+
+```solidity
+// On-chain: Store metadata CID and verify hash
+function submitECFP(
+    uint256 ecfpId,
+    address recipient,
+    uint256 amount,
+    string calldata metadataCID
+) external {
+    bytes32 hash = keccak256(
+        abi.encodePacked(ecfpId, recipient, amount, metadataCID, block.chainid)
+    );
+    proposals[ecfpId] = Proposal({
+        id: ecfpId,
+        recipient: recipient,
+        amount: amount,
+        metadataCID: metadataCID,
+        hash: hash
+    });
+    emit ProposalSubmitted(ecfpId, recipient, amount, metadataCID, hash);
+}
+```
+
 #### 2. On-Chain Registry and Governance
 
 - The Olympia DAO smart contracts SHALL include a registry recording:
@@ -261,6 +301,21 @@ The Ethereum Classic Funding Proposal (ECFP) process SHALL be implemented as an 
 
 - Treasury contract logic (per ECIP-1112) SHALL enforce that only authorized DAO proposals trigger disbursement.
 - Each transaction MUST include the relevant ECFP ID and metadata hash to ensure auditability.
+
+```solidity
+// Treasury emits metadata-bound disbursement event
+event ProposalExecuted(
+    uint256 ecfpId,
+    address indexed recipient,
+    uint256 amount,
+    bytes32 proposalHash,
+    uint256 blockNumber,
+    uint256 timestamp
+);
+```
+
+All disbursements MUST emit a standardized `ProposalExecuted` event for transparency, analytics, and auditability.
+
 
 #### 4. Transparency Dashboard
 
@@ -321,14 +376,14 @@ While ECIP-1114 introduces no changes to Ethereum Classic's consensus or EVM beh
 This example proposal hash serves as the unique identifier for execution. It links the on-chain disbursement to an immutable, off-chain metadata record stored on IPFS or Arweave. This guards against tampering and ensures verifiability of funding intent and deliverables.
 
 ```solidity
-// Example for generating a verifiable proposal hash off-chain:
+// Off-chain: Generate ECFP proposal hash for on-chain binding
 bytes32 proposalHash = keccak256(
     abi.encodePacked(
-        ecfpId,
-        recipient,
-        amount,
-        metadataCID,
-        block.chainid
+        ecfpId,        // Unique proposal ID (e.g., 0042)
+        recipient,     // Destination address
+        amount,        // Funding amount in wei
+        metadataCID,   // Content hash from IPFS or Arweave
+        block.chainid  // Replay protection domain
     )
 );
 ```
